# Urban_Cooling_Farm

./: .env.example  .gitignore  .vercelignore  README.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  index.py
app/: __init__.py  config.py  main.py
app/models/: __init__.py  database.py  models.py
app/routers/: __init__.py  agent.py  climate.py  cooling_spots.py  effects.py  missions.py
app/services/: __init__.py  climate_service.py  effect_service.py  mission_agent.py
streamlit_app/: __init__.py  app.py  requirements.txt
streamlit_app/pages/: 1_effect_dashboard.py
