[project]
name = "urban-cooling-farm"
version = "0.1.0"
description = "AI 기반 도시 열섬 완화 쿨링팜 관리 시스템"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "sqlalchemy>=2.0.25",

    # HTTP Client
    "httpx>=0.26.0",

    # Settings & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Visualization (Streamlit)
    "streamlit>=1.30.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.18.0",
    "plotly>=5.18.0",

    # Data Processing
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
